logs/Slang/generated/keywords/5.6.2--keyword_pure.sv.log
name: pure
description: The 'pure' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_pure.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_pure.sv:8:8: error: expected declarator
    bit pure;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_pure.sv:8:9: error: expected member
    bit pure;
        ^~~~
